--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <h1>Digital Twin Robotic Additive Manufacturing</h1>
     <ul>
-        <li><a href="DT-Robotic-Additive-Manufacturing-Cell/act24.html">act113.html</a></li> 
-        <li><a href="DT-Robotic-Additive-Manufacturing-Cell/act26.html">act115.html</a></li> 
-        <li><a href="DT-Robotic-Additive-Manufacturing-Cell/act28.html">act142.html</a></li>  
+        <li><a href="DT-Robotic-Additive-Manufacturing-Cell/index.html">index.html</a></li> 
     </ul>
 </body>
 </html>
