--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DT Robotic Additive Manufacturing Cell</title>
-</head>
-<body>
-    <h1>Digital Twin Robotic Additive Manufacturing</h1>
-    <ul>
-        <li><a href="DT-Robotic-Additive-Manufacturing-Cell/index.html">index.html</a></li> 
-    </ul>
-</body>
-</html>
+<HTML>
+<HEAD>
+<TITLE></TITLE>
+<SCRIPT LANGUAGE = "JavaScript"> </SCRIPT>
+</HEAD>
+<FRAMESET ROWS=10%,90%>
+ <FRAME NAME=Top SRC=Top.html SCROLLING=no>
+ <FRAMESET COLS=25%,75%>
+ <FRAME NAME=Left SRC=TOC.html SCROLLING=yes>
+ <FRAME NAME=Right SRC=Blank.html SCROLLING=yes>
+ </FRAMESET>
+</FRAMESET>
+</HTML>
