--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<HTML>
-<HEAD>
-<TITLE></TITLE>
-<SCRIPT LANGUAGE = "JavaScript"> </SCRIPT>
-</HEAD>
-<FRAMESET ROWS=10%,90%>
- <FRAME NAME=Top SRC=Top.html SCROLLING=no>
- <FRAMESET COLS=25%,75%>
- <FRAME NAME=Left SRC=TOC.html SCROLLING=yes>
- <FRAME NAME=Right SRC=Blank.html SCROLLING=yes>
- </FRAMESET>
-</FRAMESET>
-</HTML>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redireccionamiento</title>
+    <meta http-equiv="refresh" content="0; url='idef0 DT Robotica Additive Manufacturing Cell/index.html'" />
+</head>
+<body>
+    <p>Redirigiendo...</p>
+</body>
+</html>
