--- a/idef0 DT Robotica Additive Manufacturing Cell/summary.html
+++ b/idef0 DT Robotica Additive Manufacturing Cell/summary.html
@@ -1,7 +1,7 @@
 <HTML>
 <BODY>
-<BOLD><H2>Project: </H2>
-<B>Creator: </B><br>
+<BOLD><H2>Project: Digital Twin - Robotic Additive Manufacturing Cell</H2>
+<B>Creator: Brayan S. Figueroa</B><br>
 <B>Description: </B><br>
 <br><center><A HREF="mailto:brayan.s.figueroa47@gmail.com?subject=Re:Activity Modeling Project ''">Send Feedback</A></center>
 </BODY>
