--- a/idef0 DT Robotica Additive Manufacturing Cell/summary.html
+++ b/idef0 DT Robotica Additive Manufacturing Cell/summary.html
@@ -1,8 +1,9 @@
 <HTML>
 <BODY>
-<BOLD><H2>Project: Digital Twin - Robotic Additive Manufacturing Cell</H2>
-<B>Creator: Brayan S. Figueroa</B><br>
-<B>Description: </B><br>
-<br><center><A HREF="mailto:brayan.s.figueroa47@gmail.com?subject=Re:Activity Modeling Project ''">Send Feedback</A></center>
+    <BOLD><H2>Project: Digital Twin - Robotic Additive Manufacturing Cell</H2></BOLD>
+    <B>Creator: Brayan S. Figueroa</B><br>
+    <B>Description: Methodology based on IDEF0 diagrams for the development of a Digital Twin of a Robotic Additive Manufacturing Cell</B><br>
+    <br>
+    <center><A HREF="mailto:brayan.s.figueroa47@gmail.com?subject=Re:Activity Modeling Project">Send Feedback</A></center>
 </BODY>
 </HTML>
